test/spec_vectors/local_set/fail/module_9.wat
(module (func $type-param-arg-empty-vs-num (param i32) (local.set 0)))